tests/snapshot/error/error_types/parse.exp
SyntaxError: Unknown token @
  ┌ error_types/parse.js:1:5
  |
1 | 1 + @
  |     ^